# ai-financial-advisor

./: .gitignore  README.md  pyproject.toml
examples/: complete_example.py  financial_advisor_example.py  financial_models_example.py  financial_statements_example.py  financial_ta_example.py
src/agents/: __init__.py  assistant_models.py  assistant_statements.py  assistant_technical.py  base_agent.py  orchestrator.py  report_generator.py
src/skills/analyzing-financial-statements/: SKILL.md  calculate_ratios.py  interpret_ratios.py
src/skills/financial-modeling-valuation/: SKILL.md  dcf_model.py  sensitivity_analysis.py
src/skills/financial_statements/: SKILL.md
src/skills/report-generation/: SKILL.md
src/skills/technical-analysis/: SKILL.md
src/utils/: skills_manager.py
